terrain fix + flags + fixes + fixes

--- a/localisation/TD_03_missions_generic_l_english.yml
+++ b/localisation/TD_03_missions_generic_l_english.yml
@@ -107,7 +107,7 @@
  TD_naval_recruitment_center:0 "Naval Recruitment Center"
  TD_improved_ship_designs:0 "Improved Ship Designs"
 
- generic_rule_the_waves_title:0 "Rule the waves!"
+ generic_rule_the_waves_title:0 "Rule the Waves"
  generic_rule_the_waves_desc:0 ""
  TD_generic_mission_naval_supremacy:0 "Naval Supremacy"
  TD_standarized_marine_equipment:0 "Standarization of Marine Equipment"
