--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -68,6 +68,9 @@
  ashmorland_region:0 "Ashmorland"
  khantadun_region:0 "Khantadun"
  paraderavi_region:0 "Paraderavi"
+ bugtang_region:0 "Bugtang"
+ weixiao_region:0 "Weixiao"
+ zimahei_valley_region:0 "Zimahei Valley"
 
  sahilan_coast_ocean:0 "Sahilan Coast"
  eastern_chantlian_coast_ocean:0 "Northeastern Amin Ocean"
