--- a/localisation/TD_superregions_l_english.yml
+++ b/localisation/TD_superregions_l_english.yml
@@ -12,3 +12,5 @@
  central_steppe_superregion:0 "Central Steppe"
  samadia_superregion:0 "Samadia"
  northern_venatia_superregion:0 "Northern Venatia"
+ bunelisulia_superregion:0 "Bunelisulia"
+ hengtua_superregion:0 "Hengtua"
