--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -940,3 +940,19 @@
 
  KHA:0 "Khantadun"
  KHA_ADJ:0 "Khantan"
+
+ BAC:0 "Barcan"
+ BAC_ADJ:0 "Barcanian"
+ DOI:0 "Donieprowa"
+ DOI_ADJ:0 "Donieprowan"
+ KAZ:0 "Kasznary"
+ KAZ_ADJ:0 "Kasznaran"
+ MYS:0 "Myslica"
+ MYS_ADJ:0 "Myslican"
+ SOL:0 "Soltrec"
+ SOL_ADJ:0 "Soltrecian"
+
+ PRU:0 "Parum"
+ PRU_ADJ:0 "Parumian"
+ RAS:0 "Ramashtar"
+ RAS_ADJ:0 "Ramashtari"
