hengtua area names + releasables

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -607,3 +607,29 @@
  ramtasal_area:0 "Ramtasal"
  cukoradij_area:0 "Cukoradij"
  quatrara_area:0 "Quatrara"
+
+ tonghe_area:0 "Tonghe"
+ eastern_lameng_area:0 "Eastern Lameng"
+ western_lameng_area:0 "Western Lameng"
+ banasan_area:0 "Banasan"
+ gunseong_area:0 "Gunseong"
+ pulunead_area:0 "Pulunead"
+ golunjag_area:0 "Golunjag"
+ bashipista_area:0 "Bashipista"
+ zimahei_estuary_area:0 "Zimahei Delta"
+ caizhu_area:0 "Caizhu"
+ lin_area:0 "Lin"
+ nabanji_area:0 "Nabanji"
+ doqiashu_area:0 "Doqiashu"
+ mishian_area:0 "Mishian"
+ shugiyen_area:0 "Shugiyen"
+ garhaban_area:0 "Garhaban"
+ ehenkoi_area:0 "Ehenkoi"
+ dergin_area:0 "Dergin"
+ ogoljinban_area:0 "Ögöljinbanar"
+ zuuntal_area:0 "Züüntal"
+ khutiendai_area:0 "Khütiendai"
+ nogokhon_area:0 "Nogökhön"
+ aguutsol_area:0 "Agüütsol"
+ shajinkhor_area:0 "Shajinkhör"
+ bulakeshan_area:0 "Bulakeshan"
