--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -956,3 +956,14 @@
  PRU_ADJ:0 "Parumian"
  RAS:0 "Ramashtar"
  RAS_ADJ:0 "Ramashtari"
+
+ CAI:0 "Caizhu"
+ CAI_ADJ:0 "Caizhuan"
+ MMM:0 "Mau"
+ MMM_ADJ:0 "Mauan"
+ SHA:0 "Shajinkhör"
+ SHA_ADJ:0 "Shajinkhöri"
+ HNS:0 "Hensu"
+ HNS_ADJ:0 "Hensuan"
+ KHT:0 "Khütiendai"
+ KHT_ADJ:0 "Khütiendaichis"
