--- a/localisation/core_l_english.yml
+++ b/localisation/core_l_english.yml
@@ -149,7 +149,7 @@
  PIETY_DESCRIPTION_ESTATES:1 "\nThe type of piety of your ruler will influence the loyalty of your Estates."
  KARMA_DESC2:0 "Ruler Righteousness represents your monarchs stance against devils and evil in the world. If the ruler is too focused on fighting evil spirits he might succumb into becoming one himself, but if they decide to disregard this fight he might even be seen as supporter of evil. The trick lies in the balance between active and passive fight and to not disregard lives of the nations' population."
  KARMA_DESC:0 "Karma increases from:\n- §YHonoring alliances§!\n- §YReleasing vassals§!\n- §YReleasing nations in peace deals§!\n- §YReturning cores§!\n- §YConverting Provinces§!\n\nKarma decreases from:\n- §YStarting wars§!\n- §YTaking provinces in peace deals§!"
- PATRIARCH_DESCRIPTION:1 "Patriarch Authority represents the level of influence that the Orthodox Church has on the nation. In Orthodox provinces, high Patriarch Authority will decrease local unrest and increase the number of recruits joining the army."
+ PATRIARCH_DESCRIPTION:1 "Zheng means different things to various schools of thought, but it is generally seen as righteousness of the ruler and their legitimacy. While High Zheng might legitimize our rule in the provinces, low Zheng can cause widespread unrest and even detronization."
  EFFECTIVE_INCOME_EXPL:0 "This will increase the monthly income from this province by §Y$VAL$§!¤"
  EFFECTIVE_INCOME_EXPL_YEARLY:0 "This will increase the yearly income from this province by §Y$VAL$§!¤"
  EFFECTIVE_MANPOWER_EXPL:0 "This will increase the manpower from this province by §Y$VAL$§!."
@@ -773,7 +773,7 @@
  CANNOT_RETURN_PROVINCE_NOT_CONTROLLED:0 "§RYou cannot return a province which you do not control.§!"
  CANNOT_RETURN_PROVINCE_SIEGE:0 "§RYou cannot return a province which is under siege.§!"
  CANT_BUILD_UNDER_SIEGE:0 "Can't build in a province under siege."
- CURRENT_PATRIARCH_AUTHORITY:0 "Current Patriarch Authority"
+ CURRENT_PATRIARCH_AUTHORITY:0 "Current Zheng"
  UNIT_VIEW_SPLIT_LOADED:0 "Can't split since the unit is loaded on a ship!"
  UNIT_VIEW_CREATE_NEW_LOADED:0 "Can't create since the unit is loaded on a ship."
  UNIT_VIEW_CREATE_NEW_TRADE:0 "Can't create a new fleet since the fleet is currently on a trade mission"
