--- a/localisation/scandinavia_l_english.yml
+++ b/localisation/scandinavia_l_english.yml
@@ -3661,7 +3661,7 @@
  desc_gov_improved_defender_of_faith_mod:1 "As we are the Head of the [Root.Religion.GetName] Church it is only natural that we also become its Defender. Let the world know that the Papacy itself will defend the people of the Lord!\n\n§YLasts until we are no longer Defender of Faith.§!"
  lands_for_the_monasteries_reform:0 "Grant Land to the Monasteries"
  lands_for_the_monasteries_reform_desc:0 "The monasteries of the Orthodox faith are sacred ground, exempted from taxes and granted total autonomy. Granting land to the monasteries will please the patriarchy at an ignorable cost."
- mechanic_selling_titles_increases_pa_yes:1 "Selling Titles increases Patriarch Authority by §G5%§!"
+ mechanic_selling_titles_increases_pa_yes:1 "Selling Titles increases Zheng by §G5%§!"
  mechanic_free_religious_culture_yes:1 "The Estate Privilege '§YReligious Culture§!' no longer increases §YClergy§! influence"
  mechanic_on_church_built_clergy_loyalty_yes:1 "Construcing Churches and Cathedrals increases §YClergy§! loyalty by §G+2%§! and §G+5%§! respectively"
  focus_of_the_patriarchy_reform:0 "Support Monastic Schools"
