--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -6384,7 +6384,7 @@
  MAPMODE_GOVERNMENT:0 "Government Types"
  MAPMODE_OVERSEAS:0 "Overseas Provinces"
  MAPMODE_DEVASTATION:0 "Devastation"
- MAPMODE_PATRIARCHS:1 "Metropolitan"
+ MAPMODE_PATRIARCHS:1 "Local Organisations"
  sphere:0 "Sphere of Influence"
  DIPRELCH_BADBOY:0 "Infamy"
  HAS_NOT_TEMP_CLAIM_ON:0 " does NOT have a temporary claim on "
