--- a/localisation/tmm_l_english.yml
+++ b/localisation/tmm_l_english.yml
@@ -903,7 +903,7 @@
  should_migrate_instant:0 "Tribe should migrate"
  should_migrate_delayed:0 "Your capital's Devastation is getting high and you should think about migrating to one of the following provinces:\n$LIST$"
  STATE_INCOME_DEDUCTIONS:0 "...and the following deductions for state maintenance:"
- PATRIARCH_MAP_TT_CANT:0 "$NAME|Y$ cannot get a Metropolitan."
+ PATRIARCH_MAP_TT_CANT:0 "$NAME|Y$ cannot Sanctify Shriens."
  CANNOT_FORCE_TRIBUTARY_SUBJECT_TYPE_DOESNT_ALLOW:0 "$TAKER|Y$ is a $SUBJECTTYPE|Y$, which means they cannot have subjects themselves."
  CONFIRM_CONSOLIDATE_DEVELOPMENT_TEXT_FOR_ANOTHER:1 "Channel development from $NAME$ for $ACTUALTAKER$. This state will lose $DEVELOPMENT|Y$ development. Much of the development lost will end up in the $ACTUALTAKERADJ$ capital, some will be lost. In total, they will gain $DEVGAINED|Y$ development."
  CANNOT_PILLAGE_NOTHING_TO_PILLAGE:0 "There isn't anything much to pillage."
