--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -64,29 +64,29 @@
  NOSF_NO_TRACE_HOME:0 "A frontier can only be established next to a city we own that can trace a route back to our capital."
  ESTABLISH_SIBFRO_IRO:0 "Establishing a Siberian Frontier will cost §Y$COST$§!£dip£. This will create a colony that will slowly grow, without the need for a colonist, nor any colonial maintenance."
  BASE_HARSH_COST:0 "Base from Rebel Size: $VAL|Y$."
- patriarch_state:1 "Metropolitan of $NAME$"
- CONSECRATE_FOR_PA:1 "You can Consecrate a Metropolitan of a state to get $VAL$ Patriarch Authority."
- STATE_PATRIARCH_ALREADY:1 "$NAME$ already have a consecrated metropolitan!"
+ patriarch_state:1 "Great Shrine of $NAME$"
+ CONSECRATE_FOR_PA:1 "You can Sanctify Shrines in a state to get $VAL$ Zheng."
+ STATE_PATRIARCH_ALREADY:1 "$NAME$ already has Sanctified Shrines!"
  STAPAT_OTHER_REL:1 "$NAME$ is $REL$."
  STAPAT_NOT_FULL_CORE:1 "$NAME$ is just a territorial core."
  STAPAT_OTHER_CUL:1 "$NAME$ is $CUL$."
- STAPAT_LOW_DEV:1 "Metropolitans can only be consecrated in states with at least $NEED|Y$ development and there is only $CUR|Y$ in $NAME$."
- STAPAT_DO_IT:2 "You can Consecrate Metropolitans in states with at least 30 Development if all provinces are fully cored, Orthodox and of an Accepted Culture.\n\nConsecrating a Metropolitan in $NAME|Y$ will give us $VAL$ Patriarch Authority, and the following permanent effect:\n$EFFECT$"
- CONFIRCONSECRATEPATRIARCh:1 "Confirm Consecrate Metropolitan"
+ STAPAT_LOW_DEV:1 "Shrines can only be Sanctified in states with at least $NEED|Y$ development and there is only $CUR|Y$ in $NAME$."
+ STAPAT_DO_IT:2 "You can Sanctify Shrines in states with at least 30 Development if all provinces are fully cored, of your primary religion and of an Accepted Culture.\n\nSanctified Shrines in $NAME|Y$ will give us $VAL$ Zheng, and the following permanent effect:\n$EFFECT$"
+ CONFIRCONSECRATEPATRIARCh:1 "Confirm Sanctify Shrines"
  CONFIRCONSECRATEPATRIARCH_TEXT:0 "$EFFECT$\nAre you sure?"
- CONSECRATE_BUTTON:1 "Consecrate Metropolitan"
- METROPOLITAN_EMPTY:0 "No Metropolitan"
- STATE_PATRIARCH_ALREADY_MAX_AUTH:0 "Patriarch Authority is already maximized."
+ CONSECRATE_BUTTON:1 "Sanctify Shrines"
+ METROPOLITAN_EMPTY:0 "No Sanctified Shrines"
+ STATE_PATRIARCH_ALREADY_MAX_AUTH:0 "Zheng is already maximized."
  ORTHIC_NOT_CURR:0 "The '$NAME|Y$' is already our commissioned icon!"
- ORTHIC_NO_AUTH:0 "You need $VAL|Y$ Patriarch Authority to commission new icons to all churches, but you only have $CURR|Y$."
- ORTHIC_DO_IT:0 "Commissioning $NAME|Y$ to all churches will cost $COST|R$ Patriarch Authority, but give ($EFFECT$) until $UNTIL|Y$."
- CONFIRMICON:0 "Confirm Icon Commission"
+ ORTHIC_NO_AUTH:0 "You need $VAL|Y$ Zheng to spread teachings to all provinces, but you only have $CURR|Y$."
+ ORTHIC_DO_IT:0 "Spreading $NAME|Y$ to all provinces will cost $COST|R$ Zheng, but give ($EFFECT$) until $UNTIL|Y$."
+ CONFIRMICON:0 "Confirm Teaching"
  CONFIRMICON_TEXT:0 "$EFFECT$\nAre you sure?"
- NO_ICON_COMMISSIONED:0 "There is currently no icon commissioned."
- SELECT_ICON_TO_BECOMMISSIONED:0 "Select an icon to be commissioned."
+ NO_ICON_COMMISSIONED:0 "There is currently no teaching being spread."
+ SELECT_ICON_TO_BECOMMISSIONED:0 "Select a teaching to be spread."
  ORTHIC_LOSE:0 "You will lose the benefits you currently have from '$NAME|Y$'."
- PATRIARCH_MAP_TT_HAS:1 "$NAME|Y$ has a Metropolitan."
- PATRIARCH_MAP_TT_CAN:1 "$NAME|Y$ could get a Metropolitan."
+ PATRIARCH_MAP_TT_HAS:1 "$NAME|Y$ has a Sanctified Shrine."
+ PATRIARCH_MAP_TT_CAN:1 "$NAME|Y$ could get a Sanctified Shrine."
  LASTS_ICON_UNTIL:0 "This lasts until $WHEN|Y$."
  icon_michael:0 "Icon of St. Michael"
  desc_icon_michael:1 "Saint Michael, the Archistrategos, is the commander of the heavenly hosts and the Archangel who will defeat Satan in the war in Heaven. Icons of Saint Michaels are common throughout Orthodox Christendom and most Russian cities have a church dedicated to him."
@@ -1584,15 +1584,15 @@
  MANU_INCOME_D:0 "This is only valid in provinces producing §Y$GOODS$§W."
  IDEA_LIST:0 "Unlocked idea groups and number of ideas:"
  MODIFIER_IDEA_COST:0 "Idea Cost"
- PATRIARCH_AUTHORITY_LESS_THAN:0 "Patriarch Authority is less than §Y$VAL$§W percent.\n"
- PATRIARCH_AUTHORIT_AT_LEAST:0 "Patriarch Authority is at least §Y$VAL$§W percent.\n"
- ADD_PATR_AUTH:0 "$DIRECTION$ $VALUE$ Patriarch Authority"
+ PATRIARCH_AUTHORITY_LESS_THAN:0 "Zheng is less than §Y$VAL$§W percent.\n"
+ PATRIARCH_AUTHORIT_AT_LEAST:0 "Zheng is at least §Y$VAL$§W percent.\n"
+ ADD_PATR_AUTH:0 "$DIRECTION$ $VALUE$ Zheng"
  ADD_PIETY:0 "$DIRECTION$ $VALUE$ Imperial Allegiance"
  ADD_DOOM:0 "$DIRECTION$ $VALUE$ Doom"
  ADD_AUTHORITY:0 "$DIRECTION$ $VALUE$ Authority"
- PATRIARCH_AUTHORITY_IN_PROVINCES:0 "Your Orthodox provinces:"
- FULL_PATRIARCH_AUTHORITY:0 "When reaching maximum Patriarch Authority you will gain:"
- NO_PATRIARCH_AUTHORITY:0 "With no Patriarch Authority you will get no modifiers."
+ PATRIARCH_AUTHORITY_IN_PROVINCES:0 "Your True Faith provinces:"
+ FULL_PATRIARCH_AUTHORITY:0 "When reaching maximum Zheng you will gain:"
+ NO_PATRIARCH_AUTHORITY:0 "With no Zheng you will get no modifiers."
  mercantilism:0 "From Mercantilism"
  ADD_MERCANTILISM:0 "$DIRECTION$ $VALUE$ Mercantilism"
  ADD_CORRUPTION:0 "$DIRECTION$ $VALUE$ Corruption"
@@ -1620,8 +1620,8 @@
  KARMA_DECREASE:0 "This will cost us §Y$VAL$§! karma."
  KARMA_INCREASE_FOR_COUNTRY:0 "This will give $COUNTRY$ §Y$VAL$§! karma."
  KARMA_DECREASE_FOR_COUNTRY:0 "This will cost $COUNTRY$ §Y$VAL$§! karma."
- patriarch_authority_local:0 "Patriarch Authority"
- patriarch_authority_global:0 "Patriarch Authority"
+ patriarch_authority_local:0 "Zheng"
+ patriarch_authority_global:0 "Zheng"
  COMBAT_IN_FRONTLINE:1 "§Y$STRENGTH$§W in first rank (Morale: §Y$MORALE$§W)\n"
  COMBAT_IN_SECONDLINE:1 "§Y$STRENGTH$§W in second rank (Morale: §Y$MORALE$§W)\n"
  COMBAT_IN_RESERVES:1 "§Y$STRENGTH$§W in reserves (Morale: §Y$MORALE$§W)\n"
@@ -4774,8 +4774,8 @@
  USES_NOT_CHURCH_ASPECTS:0 "$COUNTRY|Y$ has NOT church aspects."
  USES_FERVOR:0 "$COUNTRY|Y$ uses fervor."
  USES_NOT_FERVOR:0 "$COUNTRY|Y$ does NOT use fervor."
- USES_PATRIARCH_AUTHORITY:0 "$COUNTRY|Y$ uses Patriarch Authority."
- USES_NOT_PATRIARCH_AUTHORITY:0 "$COUNTRY|Y$ does NOT use Patriarch Authority."
+ USES_PATRIARCH_AUTHORITY:0 "$COUNTRY|Y$ uses Zheng."
+ USES_NOT_PATRIARCH_AUTHORITY:0 "$COUNTRY|Y$ does NOT use Zheng."
  USES_PIETY:0 "$COUNTRY|Y$ uses Imperial Allegiance."
  USES_NOT_PIETY:0 "$COUNTRY|Y$ does NOT use Imperial Allegiance."
  USES_PAPACY:0 "$COUNTRY|Y$ uses Papacy."
