--- a/localisation/cossacks_l_english.yml
+++ b/localisation/cossacks_l_english.yml
@@ -836,10 +836,10 @@
  EST_VAL_PAPACY:0 "Papal States: §Y$VAL$%§!"
  EST_VAL_STATE_RELIGIOUS_MINORITY:0 "State Religion Not Dominant: §Y$VAL$%§!"
  EST_VAL_SHARIFS:0 "Sharifate of Mecca: §Y$VAL$%§!"
- EST_VAL_VERY_HIGH_PATRIARCH_AUTHORITY:0 "High Patriarch Authority: §Y$VAL$%§!"
- EST_VAL_HIGH_PATRIARCH_AUTHORITY:0 "Rising Patriarch Authority: §Y$VAL$%§!"
- EST_VAL_LOW_PATRIARCH_AUTHORITY:0 "Declining Patriarch Authority: §Y$VAL$%§!"
- EST_VAL_VERY_LOW_PATRIARCH_AUTHORITY:0 "Low Patriarch Authority: §Y$VAL$%§!"
+ EST_VAL_VERY_HIGH_PATRIARCH_AUTHORITY:0 "High Zheng: §Y$VAL$%§!"
+ EST_VAL_HIGH_PATRIARCH_AUTHORITY:0 "Rising Zheng: §Y$VAL$%§!"
+ EST_VAL_LOW_PATRIARCH_AUTHORITY:0 "Declining Zheng: §Y$VAL$%§!"
+ EST_VAL_VERY_LOW_PATRIARCH_AUTHORITY:0 "Low Zheng: §Y$VAL$%§!"
  EST_VAL_RULED_BY_RELIGIOUS_MINORITY:0 "State Religion Not Dominant: §Y$VAL$%§!"
  EST_VAL_PIOUS:0 "Pious Ruler: §Y$VAL$§!"
  EST_VAL_VERY_PIOUS:0 "Very Pious Ruler: §Y$VAL$§!"
