--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -3,6 +3,10 @@
  marstonia.1.desc:0 "News are coming from the island of Zirgukalnis where ruler of [403.Owner.Getname] supposedly exiled our merchants and seized their assets. The merchant guild is expecting a quick response to this illegal action."
  marstonia.1.a:0 "Outrageous!"
  marstonia.1.b:0 "We can't do anything about it right now."
+ marstonia.2.t:0 "Marstonian State Reforms"
+ marstonia.2.desc:0 "Lorem ipsum state reforms or smth, loremeister will add something here later"
+ marstonia.2.a:0 "Valdnieste is a good concept, we should only limit ourselves to expanding it"
+ marstonia.2.b:0 "We should abolish hereditary monarchy as a whole, and establish a elective monarchy!"
 
  seize_WGH_quarters_title:0 "Seize WGH Quarters"
  seize_WGH_quarters_desc:0 "Merchants from Wedla are actively harming our economic growth. We must become independent from their influence."
@@ -10,6 +14,11 @@
  estate_burghers_MEZ_foreign_traders:0 "Foreign Traders"
  estate_burghers_MEZ_foreign_traders_desc:0 "Most of merchants in Mezonia are of foreign origin - most commonly Wedlan and Ostemer"
  MEZ_banished_foreign_traders:0 "Foreign Traders Banished"
+
+
+
+ estate_nobles_appointed_bureaucracy:0 "Noble-appointed Bureaucracy"
+ estate_nobles_appointed_bureaucracy_desc:0 " "
 
  group_marstonian_ideas:0 "Marstonian Ideas"
  group_marstonian_ideas_start:0 "Marstonian Traditions"
@@ -73,3 +82,10 @@
 
  valdnieste_reform:0 "Valdnieste"
  valdnieste_reform_desc:0 "This government represents feudal system where powerful but loyal nobility holds great power in the country and trust in the Valdniek."
+ reformed_valdnieste_reform:0 "Reformed Valdnieste"
+ reformed_valdnieste_reform_desc:0 "This government represents early modern system where powerful but loyal nobility holds great power in the country and trust in the Valdniek."
+ marstonian_standing_army:0 "Marstonian Standing Army"
+ marstonian_standing_army_desc:0 " "
+ MRS_Get_own_dice_roll_if_has_privilege_tt:0 "Nobility in Officer Corps estate privilege will grant Own Territory Dice Roll Bonus as long as this reform is active"
+ marstonian_elective_monarchy_reform:0 "Marstonian Elective Monarchy"
+ marstonian_elective_monarchy_reform_desc:0 " "
