marstonia mt polish

--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -17,8 +17,9 @@
 
 
 
- estate_nobles_appointed_bureaucracy:0 "Noble-appointed Bureaucracy"
- estate_nobles_appointed_bureaucracy_desc:0 " "
+ estate_nobles_appointed_bureaucracy:0 "$ESTATE_NAME$ Bureaucrats"
+ estate_nobles_appointed_bureaucracy_desc:0 "We will allow some nobles to be in charge of managing their local landowner communities and representing them in our court."
+ unlock_privilege_estate_nobles_appointed_bureaucracy_tt:0 "Unlock §YNobility§! estate privilege §YNoble Bureaucrats§!"
 
  group_marstonian_ideas:0 "Marstonian Ideas"
  group_marstonian_ideas_start:0 "Marstonian Traditions"
@@ -84,8 +85,8 @@
  valdnieste_reform_desc:0 "This government represents feudal system where powerful but loyal nobility holds great power in the country and trust in the Valdniek."
  reformed_valdnieste_reform:0 "Reformed Valdnieste"
  reformed_valdnieste_reform_desc:0 "This government represents early modern system where powerful but loyal nobility holds great power in the country and trust in the Valdniek."
- marstonian_standing_army:0 "Marstonian Standing Army"
- marstonian_standing_army_desc:0 " "
- MRS_Get_own_dice_roll_if_has_privilege_tt:0 "Nobility in Officer Corps estate privilege will grant Own Territory Dice Roll Bonus as long as this reform is active"
+ marstonian_standing_army:0 "Parasts Pulis"
+ marstonian_standing_army_desc:0 "Drotaci might not be satisfied with their country or their ruler, but when the Valdniek calls for homeland defense there won't be anyone who won't fight for it."
+ MRS_Get_own_dice_roll_if_has_privilege_tt:0 "Nobility Privilege §YNobility in Officer Corps§! will grant §G+1§! §YOwn Territory Dice Roll Bonus§! as long as this reform is active."
  marstonian_elective_monarchy_reform:0 "Marstonian Elective Monarchy"
- marstonian_elective_monarchy_reform_desc:0 " "
+ marstonian_elective_monarchy_reform_desc:0 "In this sytem the monarch is elected from the group trusted nobles to make sure the best candidate is actually the most competent."
