--- a/localisation/TD_03_missions_marstonian_l_english.yml
+++ b/localisation/TD_03_missions_marstonian_l_english.yml
@@ -1,27 +1,27 @@
 ﻿l_english:
  Marstonia_Cooperation_With_Nobility_title:0 "Cooperation with Nobility"
- Marstonia_Cooperation_With_Nobility_desc:0 ""
+ Marstonia_Cooperation_With_Nobility_desc:0 "The Drotaci are the backbone of our nation. They own most of the lands and compromise almost entirety of our military forces. One might see this as a threat to kingly authority, but rest assured that our nobility trusts in the correct judgement of our [Root.Monarch.GetTitle]."
 
  Marstonia_Push_Back_the_Wedlans_title:0 "Push back the Wedlans"
- Marstonia_Push_Back_the_Wedlans_desc:0 ""
+ Marstonia_Push_Back_the_Wedlans_desc:0 "Wedlans have been a scourge of our people for many generations. For the longest time they've been trying to enforce their culture and religion on us and if we protested they started to take more and more of our land. This must come to an end!"
 
  Marstonia_For_Unified_Marstonia_title:0 "For Unified Marstonia"
- Marstonia_For_Unified_Marstonia_desc:0 ""
+ Marstonia_For_Unified_Marstonia_desc:0 "Compared to our cousins in Bogiland our disunity doesn't come from the inherent pride and individualism, but only because there hasn't been anyone brave enough to unify these lands. Will [Root.Monarch.GetTitle] [Root.Monarch.GetName] finally bring us together?"
 
  Marstonia_On_Marstonic_Frontier_title:0 "On Marstonic Frontier"
- Marstonia_On_Marstonic_Frontier_desc:0 ""
+ Marstonia_On_Marstonic_Frontier_desc:0 "Marstonian Peninsula is the place where 3 different religions mix - Old ways of Marstonic Pantheon, foreign religion of Uzkolia and ever expanding faith of Saelianism. To secure the stability and prosperity of our realm, only one religion can survive."
 
  Marstonia_Peninsula_Prosperity_title:0 "Marstonian Prosperity"
- Marstonia_Peninsula_Prosperity_desc:0 ""
+ Marstonia_Peninsula_Prosperity_desc:0 "At first glance the dense forests of Marstonia don't seem particularly prosperous of rich, but that is because our power comes not from dense urban environments but effective management of rural holdings."
 
  Marstonia_Refoundation_of_Karavija_title:0 "Refoundation of Karavija"
- Marstonia_Refoundation_of_Karavija_desc:0 ""
+ Marstonia_Refoundation_of_Karavija_desc:0 "Karavija is the cradle of the marstonian statehood, but it feel out of importance as the decades went by. If we restore this once great city it will surely increase our legitimacy and authority among our population."
 
  Marstonia_Appeasing_the_Nobility_title:0 "Appeasing the Nobility"
- Marstonia_Appeasing_the_Nobility_desc:0 ""
+ Marstonia_Appeasing_the_Nobility_desc:0 "It is apparent that some of our nobles are not fully content with the new reforms - they fear that with strengthening of our power they will lose importance in the eyes of the court. We can reassure them of their position by appeasing their representatives."
 
  Marstonia_State_Reforms_title:0 "Marstonian State Reforms"
- Marstonia_State_Reforms_desc:0 ""
+ Marstonia_State_Reforms_desc:0 "Modern problems require modern solutions. As the nations around us reform their governments from the ground up, maybe it's time for us?"
 
  mrs_cooperated_with_nobility_tt:0 "Has completed mission via cooperation with nobility"
  mrs_upgrade_nobles_officer_corps_tt:0 "Will significantly upgrade Nobility in Officer Corps estate privilege"
@@ -50,3 +50,4 @@
  TD_Marstonia_Refoundation_of_Karavija:0 "Refoundation of Karavija"
  estate_nobles_appointed_bureaucracy_scaling:0 "Noble Bureaucracy"
  TD_Marstonia_Historical_City_of_Karavija:0 "Historical City of Karavija"
+ TD_Marstonia_cooperation_with_nobility:0 "Cooperating with the Drotaci"
