--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -110,4 +110,93 @@
  PEACE_po_randwerpen_victorious:0 ""
  po_randwerpen_victorious_desc:0 ""
  WAR_FOR_NIFTHEM_WN:0 "War For Nifthem"
- 
+
+ #### Ehren Civil War
+
+ ## Fixed Events
+
+ td_ehren_civil_war.1.t:0 "Ehren Civil War"
+ td_ehren_civil_war.1.desc:0 "Conflict between democratic opposition and consulist supporters got fiery. Armed groups are now running all across our country, politcians are trying to undermine other side on every step. We don't know who will get the popular support from society."
+ td_ehren_civil_war.1.a:0 "Side with Republicans"
+ ehren_cw_pro_republican:0 "Pro Republican"
+ td_ehren_civil_war.1.b:0 "Side with Consulists"
+ ehren_cw_pro_consul:0 "Pro Consulists"
+
+
+ td_ehren_civil_war.50.t:0 "Assasination Attempt"
+ td_ehren_civil_war.50.desc:0 "Radical republican elements wants to assasinate Grand Consul so it can cause chaos in pro consulists side and make them lose support. Now we need to choose what we should do with this information."
+ td_ehren_civil_war.50.a:0 "Support them"
+ td_ehren_civil_war.50.b:0 "Relax Consuls Guard"
+ td_ehren_civil_war.50.c:0 "Expand Consuls Guard"
+ td_ehren_civil_war.50.d:0 "Crush Them Now"
+
+ td_ehren_civil_war.100.t:0 "End of Civil War"
+ td_ehren_civil_war.100.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.100.a:0 "REPLACE_ME"
+ td_ehren_civil_war.100.b:0 "REPLACE_ME"
+
+ td_ehren_civil_war.101.t:0 "REPLACE_ME"
+ td_ehren_civil_war.101.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.101.a:0 "REPLACE_ME"
+
+ td_ehren_civil_war.102.t:0 "REPLACE_ME"
+ td_ehren_civil_war.102.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.102.a:0 "REPLACE_ME"
+
+ td_ehren_civil_war.103.t:0 "REPLACE_ME"
+ td_ehren_civil_war.103.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.103.a:0 "REPLACE_ME"
+
+ ## Random Events
+
+ td_ehren_civil_war.2.t:0 "REPLACE_ME"
+ td_ehren_civil_war.2.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.2.a:0 "REPLACE_ME"
+ td_ehren_civil_war.2.b:0 "REPLACE_ME"
+
+ td_ehren_civil_war.3.t:0 "REPLACE_ME"
+ td_ehren_civil_war.3.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.3.a:0 "REPLACE_ME"
+ td_ehren_civil_war.3.b:0 "REPLACE_ME"
+
+ td_ehren_civil_war.4.t:0 "REPLACE_ME"
+ td_ehren_civil_war.4.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.4.a:0 "REPLACE_ME"
+ td_ehren_civil_war.4.b:0 "REPLACE_ME"
+
+ td_ehren_civil_war.5.t:0 "REPLACE_ME"
+ td_ehren_civil_war.5.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.5.a:0 "REPLACE_ME"
+ td_ehren_civil_war.5.b:0 "REPLACE_ME"
+
+ td_ehren_civil_war.6.t:0 "REPLACE_ME"
+ td_ehren_civil_war.6.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.6.a:0 "REPLACE_ME"
+ ehren_cw_democratic_bastion:0 "REPLACE_ME"
+ td_ehren_civil_war.6.b:0 "REPLACE_ME"
+ td_ehren_civil_war.6.c:0 "REPLACE_ME"
+ ehren_cw_province_purged:0 "REPLACE_ME"
+
+ td_ehren_civil_war.7.t:0 "REPLACE_ME"
+ td_ehren_civil_war.7.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.7.a:0 "REPLACE_ME"
+ td_ehren_civil_war.7.b:0 "REPLACE_ME"
+
+ td_ehren_civil_war.8.t:0 "REPLACE_ME"
+ td_ehren_civil_war.8.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.8.a:0 "REPLACE_ME"
+ td_ehren_civil_war.8.b:0 "REPLACE_ME"
+
+ td_ehren_civil_war.9.t:0 "REPLACE_ME"
+ td_ehren_civil_war.9.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.9.a:0 "REPLACE_ME"
+ td_ehren_civil_war.9.b:0 "REPLACE_ME"
+
+ td_ehren_civil_war.10.t:0 "REPLACE_ME"
+ td_ehren_civil_war.10.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.10.a:0 "REPLACE_ME"
+ td_ehren_civil_war.10.b:0 "REPLACE_ME"
+
+ td_ehren_civil_war.11.t:0 "REPLACE_ME"
+ td_ehren_civil_war.11.desc:0 "REPLACE_ME"
+ td_ehren_civil_war.11.a:0 "REPLACE_ME"
