--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -116,7 +116,7 @@
  ## Fixed Events
 
  td_ehren_civil_war.1.t:0 "Ehren Civil War"
- td_ehren_civil_war.1.desc:0 "Conflict between democratic opposition and consulist supporters got fiery. Armed groups are now running all across our country, politcians are trying to undermine other side on every step. We don't know who will get the popular support from society."
+ td_ehren_civil_war.1.desc:0 "Conflict between democratic opposition and consulist supporters got fiery. Armed groups are now running all across our country, politcians are trying to undermine other side on every step. Our consul now needs to fight for popularity with republicans and their leader, Ulbrecht Schröder. We don't know who will get the popular support from society."
  td_ehren_civil_war.1.a:0 "Side with Republicans"
  ehren_cw_pro_republican:0 "Pro Republican"
  td_ehren_civil_war.1.b:0 "Side with Consulists"
@@ -131,43 +131,44 @@
  td_ehren_civil_war.50.d:0 "Crush Them Now"
 
  td_ehren_civil_war.100.t:0 "End of Civil War"
- td_ehren_civil_war.100.desc:0 "REPLACE_ME"
- td_ehren_civil_war.100.a:0 "REPLACE_ME"
- td_ehren_civil_war.100.b:0 "REPLACE_ME"
+ td_ehren_civil_war.100.desc:0 "After 10 years of unrest and chaos we are finally prepared to stabilise our country. It also created new idea that we should move from our merchant traditions and form an actual government. But what path will our country choose?"
+ td_ehren_civil_war.100.a:0 "Restore our republic"
+ td_ehren_civil_war.100.b:0 "Consolidate Consuls power"
+ td_ehren_civil_war.100.c:0 "Diedrich has an idea"
 
- td_ehren_civil_war.101.t:0 "REPLACE_ME"
- td_ehren_civil_war.101.desc:0 "REPLACE_ME"
- td_ehren_civil_war.101.a:0 "REPLACE_ME"
+ td_ehren_civil_war.101.t:0 "Second Federation"
+ td_ehren_civil_war.101.desc:0 "Republican forces with Ulbrecht Schröder came our victorious in this civil war and decided to reorganise our nation into Second Ehren Federation."
+ td_ehren_civil_war.101.a:0 "For Freedom!"
 
- td_ehren_civil_war.102.t:0 "REPLACE_ME"
- td_ehren_civil_war.102.desc:0 "REPLACE_ME"
- td_ehren_civil_war.102.a:0 "REPLACE_ME"
+ td_ehren_civil_war.102.t:0 "Ehren Autocracy"
+ td_ehren_civil_war.102.desc:0 "Our Grand Consul was successfully remained in power and increased his authority over entire country. Noble rights will be restored and consuls power consolidated."
+ td_ehren_civil_war.102.a:0 "For Ehrenstaat!"
 
- td_ehren_civil_war.103.t:0 "REPLACE_ME"
- td_ehren_civil_war.103.desc:0 "REPLACE_ME"
- td_ehren_civil_war.103.a:0 "REPLACE_ME"
+ td_ehren_civil_war.103.t:0 "Ehren State"
+ td_ehren_civil_war.103.desc:0 "At first when Diedrich Schumacher took power nobody knew what he will do. But now all can see how far he is ready to go, with creation of Ehren State we will carry his anti monarchist sentiment under his mantle."
+ td_ehren_civil_war.103.a:0 "For Diedrich!"
 
  ## Random Events
 
- td_ehren_civil_war.2.t:0 "REPLACE_ME"
- td_ehren_civil_war.2.desc:0 "REPLACE_ME"
- td_ehren_civil_war.2.a:0 "REPLACE_ME"
- td_ehren_civil_war.2.b:0 "REPLACE_ME"
+ td_ehren_civil_war.2.t:0 "Soldiers Disloyal"
+ td_ehren_civil_war.2.desc:0 "Mass army mutinies started in our country. We should do something with it."
+ td_ehren_civil_war.2.a:0 "Placate them"
+ td_ehren_civil_war.2.b:0 "Purge them"
 
- td_ehren_civil_war.3.t:0 "REPLACE_ME"
- td_ehren_civil_war.3.desc:0 "REPLACE_ME"
- td_ehren_civil_war.3.a:0 "REPLACE_ME"
- td_ehren_civil_war.3.b:0 "REPLACE_ME"
+ td_ehren_civil_war.3.t:0 "Antigovernment Rallies"
+ td_ehren_civil_war.3.desc:0 "Our Citizens started to protest our government. Should we allow to continue because its their right to do so, or do we disperse them?"
+ td_ehren_civil_war.3.a:0 "Let them continue"
+ td_ehren_civil_war.3.b:0 "Disperse them"
 
- td_ehren_civil_war.4.t:0 "REPLACE_ME"
- td_ehren_civil_war.4.desc:0 "REPLACE_ME"
- td_ehren_civil_war.4.a:0 "REPLACE_ME"
- td_ehren_civil_war.4.b:0 "REPLACE_ME"
+ td_ehren_civil_war.4.t:0 "Nepotism in our ranks"
+ td_ehren_civil_war.4.desc:0 "More and more positions are being filled with pro consulists family members without any regard to republic traditions."
+ td_ehren_civil_war.4.a:0 "Kick them out"
+ td_ehren_civil_war.4.b:0 "Let them work"
 
- td_ehren_civil_war.5.t:0 "REPLACE_ME"
- td_ehren_civil_war.5.desc:0 "REPLACE_ME"
- td_ehren_civil_war.5.a:0 "REPLACE_ME"
- td_ehren_civil_war.5.b:0 "REPLACE_ME"
+ td_ehren_civil_war.5.t:0 "Diplomats act proconsulist"
+ td_ehren_civil_war.5.desc:0 "Our diplomats started to praise our consul and his power consolidation. It makes our country less prestigious, we should od something with it."
+ td_ehren_civil_war.5.a:0 "Replace them"
+ td_ehren_civil_war.5.b:0 "Don't do anything"
 
  td_ehren_civil_war.6.t:0 "REPLACE_ME"
  td_ehren_civil_war.6.desc:0 "REPLACE_ME"
