--- a/localisation/TD_03_missions_generic_l_english.yml
+++ b/localisation/TD_03_missions_generic_l_english.yml
@@ -169,6 +169,7 @@
  generic_control_local_trade_title:0 "Control Local Trade"
  generic_control_local_trade_desc:0 ""
  TD_growing_marketplace:0 "Growing Marketplace"
+ TD_experienced_merchants:0 "Experienced Merchants"
 
  generic_enforce_mercantilism_title:0 "Goods must Flow"
  generic_enforce_mercantilism_desc:0 ""
@@ -225,7 +226,7 @@
  td_missions.2.desc:0 "Our nation stands at the crossroad. As the power of [Root.GetName] and influence grows we need to decide what is the ambition of this magnificent nation."
  td_missions.2.a:0 "Continent-spanning empire"
  td_missions.2.b:0 "Local utopia"
- td_missions.2.c:0 "Heirs to the Saelian Empire (WIP)"
+ td_missions.2.c:0 "Heirs to the Saelian Empire"
  td_missions.2.d:0 "We will forge a new Pamkusea on the ruins of Zakarturia!"
  td_missions.2.e:0 "We will take back the Pamkusea from the invaders!"
  td_missions.3.t:0 "Economic Future of [Root.GetName]"
@@ -234,3 +235,4 @@
  td_missions.3.b:0 "Trade across the globe"
 
  every_province_meeting_the_criteria_tt:0 "Every province meeting the criteria will get:"
+ every_province_in_this_group_tt:0 "Every province in this province group will get:"
