ehren civil war full loc

--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -116,7 +116,7 @@
  ## Fixed Events
 
  td_ehren_civil_war.1.t:0 "Ehren Civil War"
- td_ehren_civil_war.1.desc:0 "Conflict between democratic opposition and consulist supporters got fiery. Armed groups are now running all across our country, politcians are trying to undermine other side on every step. Our consul now needs to fight for popularity with republicans and their leader, Ulbrecht Schröder. We don't know who will get the popular support from society."
+ td_ehren_civil_war.1.desc:0 "Conflict between democratic opposition and consulist supporters got fiery. Armed groups are now running all across our country, politcians are trying to undermine other side on every step. Our consul now needs to fight for popularity with republicans and their leader, Ulbrecht Schröder. We don't know who will get the popular support from society.\n\nYou need 75 of consuls authority for him to take power."
  td_ehren_civil_war.1.a:0 "Side with Republicans"
  ehren_cw_pro_republican:0 "Pro Republican"
  td_ehren_civil_war.1.b:0 "Side with Consulists"
@@ -170,34 +170,34 @@
  td_ehren_civil_war.5.a:0 "Replace them"
  td_ehren_civil_war.5.b:0 "Don't do anything"
 
- td_ehren_civil_war.6.t:0 "REPLACE_ME"
- td_ehren_civil_war.6.desc:0 "REPLACE_ME"
- td_ehren_civil_war.6.a:0 "REPLACE_ME"
- ehren_cw_democratic_bastion:0 "REPLACE_ME"
- td_ehren_civil_war.6.b:0 "REPLACE_ME"
- td_ehren_civil_war.6.c:0 "REPLACE_ME"
- ehren_cw_province_purged:0 "REPLACE_ME"
+ td_ehren_civil_war.6.t:0 "Rally Accident"
+ td_ehren_civil_war.6.desc:0 "Republican protesters by mistake broken a law forcing us to arrest them. We can pardon them, just arrest them or use this occasion to supress them for good."
+ td_ehren_civil_war.6.a:0 "Pardon them"
+ ehren_cw_democratic_bastion:0 "Republican Bastion"
+ td_ehren_civil_war.6.b:0 "Law is Law"
+ td_ehren_civil_war.6.c:0 "Supress them"
+ ehren_cw_province_purged:0 "Province Supressed"
 
- td_ehren_civil_war.7.t:0 "REPLACE_ME"
- td_ehren_civil_war.7.desc:0 "REPLACE_ME"
- td_ehren_civil_war.7.a:0 "REPLACE_ME"
- td_ehren_civil_war.7.b:0 "REPLACE_ME"
+ td_ehren_civil_war.7.t:0 "Consul propose a law"
+ td_ehren_civil_war.7.desc:0 "Grand Consul decided that he needs to take matters into his own hands. He proposed a new controversial law, we can block it in parlament or allow it to pass."
+ td_ehren_civil_war.7.a:0 "Block it"
+ td_ehren_civil_war.7.b:0 "Pass it"
 
- td_ehren_civil_war.8.t:0 "REPLACE_ME"
- td_ehren_civil_war.8.desc:0 "REPLACE_ME"
- td_ehren_civil_war.8.a:0 "REPLACE_ME"
- td_ehren_civil_war.8.b:0 "REPLACE_ME"
+ td_ehren_civil_war.8.t:0 "Famous officer supports Consul"
+ td_ehren_civil_war.8.desc:0 "One of most famous officers decided to support consuls authoritarian measures. Consul want to promote him so he can lead our armies but opposition wants to demote him."
+ td_ehren_civil_war.8.a:0 "Demote him"
+ td_ehren_civil_war.8.b:0 "Promote him"
 
- td_ehren_civil_war.9.t:0 "REPLACE_ME"
- td_ehren_civil_war.9.desc:0 "REPLACE_ME"
- td_ehren_civil_war.9.a:0 "REPLACE_ME"
- td_ehren_civil_war.9.b:0 "REPLACE_ME"
+ td_ehren_civil_war.9.t:0 "Anticonsulist Rebellion"
+ td_ehren_civil_war.9.desc:0 "Local republicans decided to take matters into their own hands and started an armed rebellion. We can either crush them all or denounce them so we don't need to worry that much about them."
+ td_ehren_civil_war.9.a:0 "Denounce them"
+ td_ehren_civil_war.9.b:0 "Crush them"
 
- td_ehren_civil_war.10.t:0 "REPLACE_ME"
- td_ehren_civil_war.10.desc:0 "REPLACE_ME"
- td_ehren_civil_war.10.a:0 "REPLACE_ME"
- td_ehren_civil_war.10.b:0 "REPLACE_ME"
+ td_ehren_civil_war.10.t:0 "Proconsulist Rebellion"
+ td_ehren_civil_war.10.desc:0 "Local consulists decided to take matters into their own hands and started an armed rebellion. We can either arrest them or let them roam around."
+ td_ehren_civil_war.10.a:0 "Arrest them"
+ td_ehren_civil_war.10.b:0 "Let them roam"
 
- td_ehren_civil_war.11.t:0 "REPLACE_ME"
- td_ehren_civil_war.11.desc:0 "REPLACE_ME"
- td_ehren_civil_war.11.a:0 "REPLACE_ME"
+ td_ehren_civil_war.11.t:0 "Province in disarray"
+ td_ehren_civil_war.11.desc:0 "We lost control over this province and now need to retake it from the rebels"
+ td_ehren_civil_war.11.a:0 "Okay"
