--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -113,6 +113,8 @@
 
  #### Ehren Civil War
 
+ ehren_civil_war:0 "Ehren Civil War"
+
  ## Fixed Events
 
  td_ehren_civil_war.1.t:0 "Ehren Civil War"
@@ -201,3 +203,12 @@
  td_ehren_civil_war.11.t:0 "Province in disarray"
  td_ehren_civil_war.11.desc:0 "We lost control over this province and now need to retake it from the rebels"
  td_ehren_civil_war.11.a:0 "Okay"
+
+ ## Post Governments
+
+ ehrenic_federation:0 "Second Ehren Federation"
+ ehrenic_federation_desc:0 "Our government is now guarantees freedom to all citizens regardless their wealth. There are still merchant influence and rich people can get further than normal citizens but we are on path to better future."
+ first_ehren_state:0 "First Ehren State"
+ first_ehren_state_desc:0 "Our government is a dictatorship centered on Diedrichs vision where ruler can have absolute power over entire nation. It is also very antimonarchist and wants to spread its republican traditions to other nations."
+ ehrenic_autocracy:0 "Ehren Autocracy"
+ ehrenic_autocracy_desc:0 "During first civil war when nobles fought with merchants they lost and lost their rights, but now when cousul holds more power over country and parlament can't stop him they regained power for making it possible."
