--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -113,6 +113,8 @@
 
  #### Ehren Civil War
 
+ EHR_war_in_nifthem_finished_flag:0 "War in Nifthem Finished"
+
  ehren_civil_war:0 "Ehren Civil War"
 
  ## Fixed Events
