final noordland push

--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -120,7 +120,7 @@
  ## Fixed Events
 
  td_ehren_civil_war.1.t:0 "Ehren Civil War"
- td_ehren_civil_war.1.desc:0 "Conflict between democratic opposition and consulist supporters got fiery. Armed groups are now running all across our country, politcians are trying to undermine other side on every step. Our consul now needs to fight for popularity with republicans and their leader, Ulbrecht Schröder. We don't know who will get the popular support from society.\n\nYou need 75 of consuls authority for him to take power."
+ td_ehren_civil_war.1.desc:0 "Conflict between democratic opposition and consulist supporters got fiery. Armed groups are now running all across our country, politcians are trying to undermine other side on every step. Our consul now needs to fight for popularity with republicans and their leader, Ulbrecht Schroder. We don't know who will get the popular support from society.\n\nYou need 75 of consuls authority for him to take power."
  td_ehren_civil_war.1.a:0 "Side with Republicans"
  ehren_cw_pro_republican:0 "Pro Republican"
  td_ehren_civil_war.1.b:0 "Side with Consulists"
@@ -214,3 +214,11 @@
  first_ehren_state_desc:0 "Our government is a dictatorship centered on Diedrichs vision where ruler can have absolute power over entire nation. It is also very antimonarchist and wants to spread its republican traditions to other nations."
  ehrenic_autocracy:0 "Ehren Autocracy"
  ehrenic_autocracy_desc:0 "During first civil war when nobles fought with merchants they lost and lost their rights, but now when cousul holds more power over country and parlament can't stop him they regained power for making it possible."
+
+ ## Country names
+
+ EHRENBUND:0 "Ehrenbund"
+ EHRENBUND_ADJ:0 "Ehren"
+
+ EHRENIA:0 "Ehrenia"
+ EHRENIA_ADJ:0 "Ehren"
