--- a/localisation/TD_03_missions_wedla_l_english.yml
+++ b/localisation/TD_03_missions_wedla_l_english.yml
@@ -41,7 +41,7 @@
  WED_dominated_the_drotaci:0 "Dominated the Drotaci"
  WED_Vanquish_Uzkolia_tt1:0 "If completed by accepting the Uzkolian culture:"
  WED_uzkolian_prosperity:0 "Uzkolian Prosperity"
- WED_Vanquish_Uzkolia_tt2:0 "If completed by culture converting the Uzkolian Culture:" 
+ WED_Vanquish_Uzkolia_tt2:0 "If completed by culture converting Uzkolia:" 
  WED_forest_exploitation:0 "Forest Exploitation"
  WED_uzkolian_wood:0 "Uzkolian Wood"
 
